--- a/robot/camera_params.yaml
+++ b/robot/camera_params.yaml
@@ -8,16 +8,4 @@
     image_width: 800
     image_height: 600
     camera_name: "arena_cam"
-    camera_info_url: "package://usb_cam/config/camera_info.yaml"
-    focus_auto: true
-    brightness: -1
-    contrast: -1
-    saturation: -1
-    sharpness: -1
-    gain: -1
-    auto_white_balance: true
-    white_balance: 4000
-    autoexposure: true
-    exposure: 1000
-    autofocus: false
-    focus: -1
+    power_line_frequency: 2
