--- a/robot/src/rabbit_detection/package.xml
+++ b/robot/src/rabbit_detection/package.xml
@@ -4,15 +4,21 @@
   <name>rabbit_detection</name>
   <version>0.0.0</version>
   <description>detect the rabbit bot and locate its coordinate</description>
-  <maintainer email="thirawat.tam@gmail.com">Tam Bureetes</maintainer>
+  <maintainer email="tbureete@purdue.edu">Tam Bureetes</maintainer>
   <license>MIT</license>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
+  <depend>sensor_msgs</depend>
+  <depend>libopencv-dev</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
