--- a/robot/src/robo_rabbit_run/package.xml
+++ b/robot/src/robo_rabbit_run/package.xml
@@ -10,6 +10,8 @@
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf2_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>libopencv-dev</depend>
